# openspec_test

./: .gitignore  README.md  Taskfile.yml  devbox.json  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json
.github/workflows/: ci.yml
allure-report/: index.html
allure-report/export/: influxDbData.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/memory/: session_store.py
backend/app/routers/: chat.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py
backend/tests/: conftest.py  test_chat_api.py  test_chat_service.py  test_health.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/api/: chat.ts
frontend/src/components/: Chat.css  Chat.test.tsx  Chat.tsx
frontend/src/utils/: session.test.ts  session.ts
openspec/changes/add-ai-chatbot/: design.md  tasks.md
openspec/changes/add-dev-tasks/: design.md  tasks.md
openspec/changes/add-devbox-env/: design.md  proposal.md  tasks.md
openspec/changes/add-test-report-artifacts/: tasks.md
openspec/changes/archive/2026-06-21-add-ai-chatbot/: proposal.md  tasks.md
openspec/changes/migrate-backend-uv-venv/: tasks.md
openspec/specs/chat-api/: spec.md
openspec/specs/chat-ui/: spec.md
openspec/specs/dev-tasks/: spec.md
openspec/specs/dev-tooling/: spec.md
openspec/specs/devbox-env/: spec.md
openspec/specs/python-env/: spec.md
openspec/specs/test-reports/: spec.md
scripts/: allure-report.sh  devbox-install.sh  devbox-verify.sh
(+18 files in other folders)
